kubernetes/apps/base/monitoring/grafana/ingress.yaml
# Grafana Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app.kubernetes.io/name: grafana
  annotations:
    kubernetes.io/ingress.class: cilium
spec:
  tls:
    - hosts:
        - grafana.home-infra.net
      secretName: wildcard-home-infra-net-tls
  rules:
    - host: grafana.home-infra.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
